Fix scrollbar position by letting datatable handle internal scrolling

--- a/lwc/bciListView/bciListView.css
+++ b/lwc/bciListView/bciListView.css
@@ -566,7 +566,6 @@
     flex-direction: column;
     flex: 1;
     min-height: 0;
-    overflow: auto;
 }
 
 /* Round the corners of the table */
